--- a/project2/home.html
+++ b/project2/home.html
@@ -13,51 +13,43 @@
 
 <body>
     <!--start header  -->
-    <header class="sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-black sticky-top">
         <div class="container-fluid">
-            <div class="row align-items-center justify-content-between no-gutters bg-black ">
-                <div class="col-xl-3 col-lg-2 m-2">
-                    <div class="logo-img">
-                        <a href="index.html">
-                            <img src="images/logo.png" alt="">
-                        </a>
-                    </div>
-                </div>
-                <div class="col-xl-8 col-lg-8">
-                    <nav class="navbar navbar-expand-lg navbar-dark bg-black text-white">
-                        <div class="container-fluid">
-                            <a class="navbar-brand" href="#"></a>
-                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
-                                aria-expanded="false" aria-label="Toggle navigation bg-secondary">
-                                <span class="navbar-toggler-icon"></span>
-                            </button>
-                            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                                <ul class="navbar-nav">
-                                    <li class="nav-item ">
-                                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link active" href="#about">About us</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link active" href="#practice">Practice Area</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link active" href="#attorneys">Attorneys</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link active" href="#contact">Contact us</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </nav>
-                </div>
+            <img src="images/logo.png" alt="">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation bg-secondary">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse justify-content-center navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item ">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#about">About us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#practice">Practice Area</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#attorneys">Attorneys</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#contact">Contact us</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="fa-2x d-none d-lg-block">
+                <a style="color:white;" href="#">
+                    <i class="fa-brands fa-facebook"></i></a>
+                <a style="color:white;" href="#">
+                    <i class="fa-brands fa-instagram"></i></a>
+                <a style="color:white;" href="#">
+                    <i class="fa-brands fa-twitter"></i></a>
             </div>
         </div>
-    </header>
-    <!--and header -->
+    </nav>
+    <!-- and header  -->
 
     <!--start carousel slide -->
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
@@ -331,7 +323,8 @@
         <div class="row">
             <div class="col-12 my-5 text-center">
                 <div class="mb-3 display-3 fw-medium">Contact us</div>
-            </div>        </div>
+            </div>
+        </div>
         <div class="row">
             <div class="col-12">
                 <div class="card shadow-lg">
@@ -371,7 +364,8 @@
                             <div class="col-lg-6 col-md-12 col-sm-12" style="margin-top: 150px">
                                 <div class="card-body justify-content-center">
                                     <h1 class="card-title fw-medium">Make an Appointment</h1>
-                                    <p style="color: #727272; font-size: 20px; margin-top: 13px; margin-bottom: 40px;">Many variations of passages of Lorem Ipsum available, but the majority have
+                                    <p style="color: #727272; font-size: 20px; margin-top: 13px; margin-bottom: 40px;">
+                                        Many variations of passages of Lorem Ipsum available, but the majority have
                                         suffered alteration in some.</p>
                                     <form action="" method="">
                                         <div class="form-floating mb-3">
