--- a/project3/home.html
+++ b/project3/home.html
@@ -14,53 +14,45 @@
 
 <body>
     <!--start header  -->
-    <header class="sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-dark  sticky-top">
         <div class="container-fluid">
-            <div class="row align-items-center justify-content-between no-gutters">
-                <div class="col-xl-3 col-lg-2 m-2">
-                    <div class="logo-img">
-                        <a href="index.html">
-                            <img src="images/download.png" width="100px" height="50px" alt="">
-                        </a>
-                    </div>
-                </div>
-                <div class="col-xl-8 col-lg-8 ">
-                    <nav class="navbar navbar-expand-lg">
-                        <div class="container-fluid">
-                            <a class="navbar-brand" href="#"></a>
-                            <button class="navbar-toggler text-black" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
-                                aria-expanded="false" aria-label="Toggle navigation bg-secondary">
-                                <span class="navbar-toggler-icon"></span>
-                            </button>
-                            <div class="collapse navbar-collapse show" id="navbarNavDropdown">
-                                <ul class="navbar-nav fw-bold">
-                                    <li class="nav-item ">
-                                        <a class="nav-link active" href="#">Home</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link active" href="#about">About us</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link active" href="#facilities">School Facilities</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link active" href="#teachers">Teachers</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link active" href="#appointment">Appointment</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link active" href="#contact">Contact us</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </nav>
-                </div>
+            <img src="images/download.png" width="100px" height="50px" alt="">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation bg-secondary">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse text-black justify-content-center show" id="navbarNavDropdown">
+                <ul class="navbar-nav fw-bold">
+                    <li class="nav-item ">
+                        <a class="nav-link active" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#about">About us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#facilities">School Facilities</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#teachers">Teachers</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#appointment">Appointment</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#contact">Contact us</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="fa-2x d-none d-lg-block">
+                <a style="color:black;" href="#">
+                    <i class="fa-brands fa-facebook"></i></a>
+                <a style="color:black;" href="#">
+                    <i class="fa-brands fa-instagram"></i></a>
+                <a style="color:black;" href="#">
+                    <i class="fa-brands fa-twitter"></i></a>
             </div>
         </div>
-    </header>
+    </nav>
     <!--and header -->
 
     <!--start carousel slide -->
