--- a/js/lesson14.html
+++ b/js/lesson14.html
@@ -61,8 +61,8 @@
             else {
                 result = '<br/> result of qube is ' + (num1 * num1 * num1);
             }
+            html('output', result);
             console.log(result);
-            html('output', result, true)
         }
     </script>
 </body>
