--- a/project1/home.html
+++ b/project1/home.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Happy Dental Clinic</title>
-
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="home.css">
@@ -15,14 +15,15 @@
 <body>
     <!-- menu -->
     <nav class="navbar navbar-expand-xl bg-body-tertiary sticky-top">
-        <div class="container-fluid ">
-            <a class="navbar-brand" href="#"><img src="images/" alt="">Happy Dental Clinic</a>
+        <div class="container-fluid">
+            <img src="images/h1.png.png" width="80px" alt="">
+            <a class="navbar-brand" href="#">Happy Dental Clinic</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarBasic"
                 aria-controls="navbarBasic" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse show" id="navbarBasic">
-                <ul class="navbar-nav me-auto mb-2 mb-l" id="#navbarTogglerDemo02">
+                <ul class="navbar-nav fw-bold me-auto" id="#navbarTogglerDemo02">
                     <li class="nav-item active">
                         <a class="nav-link" href="#carouselExampleCaptions">Home</a>
                     </li>
@@ -361,7 +362,7 @@
                                 <div class="textshadow display-3 fw-medium text-center">Opening Hours</div>
                             </div>
                             <li class="text-center my-3"><a href="#">We are open Now</a></li>
-                            <div class="col-4">
+                            <div class="col-lg-4">
                                 <table class="table table-bordered text-black ">
                                     <tbody>
                                         <tr>
@@ -471,18 +472,17 @@
                 <div class="card shadow-lg">
                     <div class="card-body">
                         <div class="row">
-                            <div class="col-lg-5 col-md-12">
-                                <iframe width="500" height="350" frameborder="0" scrolling="no" marginheight="0"
-                                    marginwidth="0"
+                            <div class="col-lg-12 col-md-12">
+                                <iframe width="100%" height="450"
                                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7339.19368928061!2d72.59084220498656!3d23.111849615175526!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395e83ca9e49a4e7%3A0x9718a86b22614d6c!2sHAPPY%20DENTAL%20CLINIC!5e0!3m2!1sen!2sin!4v1678168728415!5m2!1sen!2sin"
-                                    style="border: 1px solid black" allowfullscreen="" loading="lazy"
+                                    style="border: 1px solid black" llowfullscreen="" loading="lazy"
                                     referrerpolicy="no-referrer-when-downgrade"></iframe>
                             </div>
-                            <div class="col-lg-7 col-md-12">
+                            <div class="col-lg-12 col-md-12">
                                 <h3>Happy Dental Clinic</h3>
                                 <div class="mt-5">
                                     <img src="images/hicon.png" width="30px" height="30px" alt="">
-                                    <span style="font-size: 20px;">
+                                    <span style="font-size: 18px; color: black;">
                                         &emsp;Elegance,Opposite Radhe Bunglow, New C G Road-Chandkheda, Ahmedabad,
                                         Gujarat
                                     </span>
