--- a/project1/home.html
+++ b/project1/home.html
@@ -6,52 +6,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Happy Dental Clinic</title>
-    
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="home.css">
 </head>
 
 <body>
-    <!-- menu -->
-    <nav class="navbar navbar-expand-xl bg-body-tertiary sticky-top">
+    <!-- start header -->
+    <nav class="navbar navbar-expand-xl sticky-top bgcolor navbar-light">
         <div class="container-fluid">
-            <img src="images/h1.png.png" width="80px" alt="">
-            <a class="navbar-brand" href="#">Happy Dental Clinic</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarBasic"
-                aria-controls="navbarBasic" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse show" id="navbarBasic">
-                <ul class="navbar-nav fw-bold me-auto" id="#navbarTogglerDemo02">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#carouselExampleCaptions">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#services">Services</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#about">About us</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#prices">Prices</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#opening">Opening Hour</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#booking">Apointment</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#contactus">Contact us</a>
-                    </li>
-                </ul>
-            </div>
+          <a class="navbar-brand" href="#"><b class="nav-link fw-bold">Happy Dental Clinic</b></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarLight" aria-controls="navbarLight" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse show justify-content-end" id="navbarLight">
+            <ul class="navbar-nav fw-bold mb-2 mb-xl-0">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#carouselExampleCaptions">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#services">Services</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#about">About us</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#prices">Prices</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#opening">Opening Hour</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#booking">Apointment</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#contactus">Contact us</a>
+                </li>
+            </ul>
+          </div>
         </div>
-    </nav>
-    <!-- menu -->
+      </nav>
+    <!-- end header -->
 
-    <!-- slides -->
+    <!-- start slides -->
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
@@ -63,25 +61,25 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="images/b2.jpg" width="1200px" height="450px" class="d-block w-100" alt="...">
+                <img src="images/b2.jpg" width="1200px" height="550px" class="d-block w-100" alt="...">
                 <div class="carousel-caption">
-                    <div class="df display-4 mb-5">Welcome To<br> Happy Dental
+                    <div class="df display-4 mb-4">Welcome To<br> Happy Dental
                         Clinic</div>
-                    <div class="df1 display-5 mb-lg-5">We Believe Everyone Should Have Easy Access To Great Dental Care
+                    <div class="df1 display-5 mb-lg-4 d-none d-lg-block">We Believe Everyone Should Have Easy Access To Great Dental Care
                     </div>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="images/3.jpg" width="1200px" height="450px" class="d-block w-100" alt="...">
+                <img src="images/3.jpg" width="1200px" height="500px" class="d-block w-100" alt="...">
                 <div class="carousel-caption">
-                    <div class="df1 display-5 mb-lg-5">We Believe Everyone Should Have Easy Access To Great Dental Care
+                    <div class="df1 display-5 mb-lg-5 d-none d-lg-block">We Believe Everyone Should Have Easy Access To Great Dental Care
                     </div>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="images/1.jpg" width="1200px" height="450px" class="d-block w-100" alt="...">
+                <img src="images/1.jpg" width="1200px" height="500px" class="d-block w-100" alt="...">
                 <div class="carousel-caption">
-                    <div class="df1 display-5 mb-lg-5">We Believe Everyone Should Have Easy Access To Great Dental Care
+                    <div class="df1 display-5 mb-lg-5 d-none d-lg-block">We Believe Everyone Should Have Easy Access To Great Dental Care
                     </div>
                 </div>
             </div>
@@ -362,7 +360,7 @@
                                 <div class="textshadow display-3 fw-medium text-center">Opening Hours</div>
                             </div>
                             <li class="text-center my-3"><a href="#">We are open Now</a></li>
-                            <div class="col-lg-4">
+                            <div class="col-4">
                                 <table class="table table-bordered text-black ">
                                     <tbody>
                                         <tr>
@@ -461,44 +459,43 @@
     <!-- Booking  -->
 
     <!-- Contact -->
-    <div id="contactus" class="container-fluid">
+    <div class="row">
         <div class="row">
-            <div class="row">
-                <div class="col-12 my-5">
-                    <div class="textshadow display-3 fw-medium text-center">Contact us</div>
-                </div>
+            <div class="col-12 my-5">
+                <div class="textshadow display-3 fw-medium text-center">Contact us</div>
             </div>
-            <div class="col-12">
-                <div class="card shadow-lg">
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="col-lg-12 col-md-12">
-                                <iframe width="100%" height="450"
-                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7339.19368928061!2d72.59084220498656!3d23.111849615175526!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395e83ca9e49a4e7%3A0x9718a86b22614d6c!2sHAPPY%20DENTAL%20CLINIC!5e0!3m2!1sen!2sin!4v1678168728415!5m2!1sen!2sin"
-                                    style="border: 1px solid black" llowfullscreen="" loading="lazy"
-                                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <div class="col-12">
+            <div class="card shadow-lg">
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-lg-8">
+                            <iframe width="100%" height="350" frameborder="0" scrolling="no" marginheight="0"
+                                marginwidth="0"
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7339.19368928061!2d72.59084220498656!3d23.111849615175526!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395e83ca9e49a4e7%3A0x9718a86b22614d6c!2sHAPPY%20DENTAL%20CLINIC!5e0!3m2!1sen!2sin!4v1678168728415!5m2!1sen!2sin"
+                                style="border: 1px solid black" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        </div>
+                        <div class="col-lg-4">
+                            <h3>Happy Dental Clinic</h3>
+                            <div class="mt-5">
+                                <img src="images/hicon.png" width="30px" height="30px" alt="">
+                                <span style="font-size: 20px;">
+                                    &emsp;Elegance,Opposite Radhe Bunglow, New C G Road-Chandkheda, Ahmedabad,
+                                    Gujarat
+                                </span>
                             </div>
-                            <div class="col-lg-12 col-md-12">
-                                <h3>Happy Dental Clinic</h3>
-                                <div class="mt-5">
-                                    <img src="images/hicon.png" width="30px" height="30px" alt="">
-                                    <span style="font-size: 18px; color: black;">
-                                        &emsp;Elegance,Opposite Radhe Bunglow, New C G Road-Chandkheda, Ahmedabad,
-                                        Gujarat
-                                    </span>
-                                </div>
-                                <div class="mt-3">
-                                    <img src="images/picon.png" width="30px" height="30px" alt="">
-                                    <span style="font-size: 20px;">
-                                        &emsp;+91-8511466406
-                                    </span>
-                                </div>
-                                <div class="mt-3">
-                                    <img src="images/micon.png" width="30px" height="30px" alt="">
-                                    <span style="font-size: 20px;">
-                                        &emsp;happydental@gmail.com
-                                    </span>
-                                </div>
+                            <div class="mt-3">
+                                <img src="images/picon.png" width="30px" height="30px" alt="">
+                                <span style="font-size: 20px;">
+                                    &emsp;+91-8511466406
+                                </span>
+                            </div>
+                            <div class="mt-3">
+                                <img src="images/micon.png" width="30px" height="30px" alt="">
+                                <span style="font-size: 20px;">
+                                    &emsp;happydental@gmail.com
+                                </span>
                             </div>
                         </div>
                     </div>
