--- a/project1/home.html
+++ b/project1/home.html
@@ -14,7 +14,7 @@
 
 <body>
     <!-- start header -->
-    <!-- <nav class="navbar navbar-expand-xl sticky-top bgcolor navbar-light">
+    <nav class="navbar navbar-expand-xl sticky-top bgcolor navbar-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="#"><b class="nav-link fw-bold">Happy Dental Clinic</b></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarLight"
@@ -47,7 +47,7 @@
                 </ul>
             </div>
         </div>
-    </nav> -->
+    </nav>
     <!-- end header -->
 
     <!-- start slides -->
