--- a/js/pro1.html
+++ b/js/pro1.html
@@ -1,28 +1,31 @@
-<!-- 1) create web page which has javascript to accept two three values (amount,rate,year) from user using prompt and then calculate simple interest and display it in web page using write method. -->
-<!-- SI = P × R × T / 100 -->
+<!-- 1) create web page which has javascript to accept two number from user using prompt and then calculate result of addition, substraction, multiplication, division and display it in web page using write method. -->
 
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
 
 <body>
-    <h1>Simple Interest Calculator</h1>
-    Interest Earned : 
+    <h2>Calculate</h2>
+    <hr>
     <script>
-        var p = 0;
-        var r = 0;
-        var t = 0;
-        p = prompt('Enter your Amount', 0)
-        r = prompt('Enter your Rate', 0)
-        t = prompt('Enter your Year', 0)
-        var ans =  p * r * t / 100
-        document.write(ans)
+        var num1,num2,ans;
+        num1 = parseInt(prompt("enter First number"));
+        num2 = prompt("enter Second number");
+        var ans = num1 + num2;
+        document.write("<br>square of Addition is : "+ans);
+        var ans = num1 - num2;
+        document.write("<br>square of Substraction is : "+ans);
+        var ans = num1 * num2;
+        document.write("<br>square of Multiplication is : "+ans);
+        var ans = num1 / num2;
+        document.write("<br>square of Division is : "+ans);
+        document.write("<br/> good bye...");
     </script>
 </body>
 
