--- a/js/single2.html
+++ b/js/single2.html
@@ -16,6 +16,7 @@
     <script src="common-class.js"></script>
     <script>
         //create class es6 
+        //parent/root/base class 
         class preson extends IO {
 
             gm() {
@@ -33,6 +34,7 @@
                 this.gn();
             }
         }
+         //create object
         var v1 = new preson();
         v1.WhatIcando();
     </script>
