--- a/js/multilevel.html
+++ b/js/multilevel.html
@@ -15,6 +15,8 @@
     </div>
     <script>
         //create class es6 
+        //parent/root/base class 
+
         class preson {
 
             gm() {
@@ -32,6 +34,8 @@
                 this.gn();
             }
         }
+
+        //child/sub/dervied class 
         class student extends preson {
             read() {
                 document.getElementById("root").innerHTML += "<br> Student can read";
@@ -50,23 +54,22 @@
                 this.walk();
             }
         }
-        class teacher extends student{
+        class teacher extends student {
 
-            teach()
-            {
+            teach() {
                 document.getElementById("root").innerHTML += "<br> Teacher can Teach";
             }
-            homework()
-            {
+            homework() {
                 document.getElementById("root").innerHTML += "<br> Teacher can Homework";
             }
-            WhatIcando()
-            {
+            WhatIcando() {
                 this.teach();
                 this.homework();
                 super.WhatIcando();
             }
         }
+
+         //create object
         var v1 = new teacher();
         v1.WhatIcando();
     </script>
