--- a/js/pro1.html
+++ b/js/pro1.html
@@ -16,15 +16,15 @@
     <script>
         var num1,num2,ans;
         num1 = parseInt(prompt("enter First number"));
-        num2 = prompt("enter Second number");
+        num2 = parseInt(prompt("enter second number"));
         var ans = num1 + num2;
-        document.write("<br>square of Addition is : "+ans);
+        document.write("<br> Addition is : "+ans);
         var ans = num1 - num2;
-        document.write("<br>square of Substraction is : "+ans);
+        document.write("<br> Substraction is : "+ans);
         var ans = num1 * num2;
-        document.write("<br>square of Multiplication is : "+ans);
+        document.write("<br> Multiplication is : "+ans);
         var ans = num1 / num2;
-        document.write("<br>square of Division is : "+ans);
+        document.write("<br> Division is : "+ans);
         document.write("<br/> good bye...");
     </script>
 </body>
