--- a/js/pro9.html
+++ b/js/pro9.html
@@ -11,7 +11,22 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <style>
+        #root {
+            display: flex;
+            flex-wrap: wrap;
+        }
 
+        p {
+            background-color: rgb(199, 243, 241);
+            font-size: 2em;
+            padding: 10px;
+            border: 1px solid black;
+            margin-bottom: 10px;
+            width: 50%;
+            box-sizing: border-box;
+        }
+    </style>
 </head>
 
 <body>
@@ -19,12 +34,12 @@
         <div class="row">
             <div class="col-12 ">
                 <div class="card">
-                    <div class="card-header h3">
+                    <div class="card-header h3 bg-primary-subtle">
                         Cricket Players Career One Day Statistics
                     </div>
                     <div class="card-body">
                         <div id="root">
-                            
+
                         </div>
                     </div>
                 </div>
@@ -35,7 +50,23 @@
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/16e157803b.js" crossorigin="anonymous"></script>
-    <script></script>
+    <script>
+        var players = [
+            { name: 'Rohit Sharma', run: 9825, HS: 264, Avg: 48.64, hc: 48, fc: 30 },
+            { name: 'Virat Kohli', run: 12898, HS: 183, Avg: 57.32, hc: 65, fc: 46 },
+            { name: 'Shikhar Dhawan', run: 6793, HS: 143, Avg: 44.11, hc: 39, fc: 17 },
+            { name: 'Rishabh Pant', run: 865, HS: 125, Avg: 34.21, hc: 5, fc: 1 },
+            { name: 'KL Rahul', run: 1986, HS: 112, Avg: 45.12, hc: 13, fc: 5 },
+            { name: 'Sanju Samson', run: 330, HS: 86, Avg: 66.0, hc: 2, fc: 0 },
+            { name: 'Ravindra Jadeja', run: 2526, HS: 87, Avg: 32.21, hc: 13, fc: 0 },
+            { name: 'Ravichandran Ashwin', run: 707, HS: 65, Avg: 16.21, hc: 1, fc: 0 },
+        ];
+
+        var root = document.getElementById("root");
+        players.map(function (players) {
+            root.innerHTML += `<p>Player Name : ${players.name} <br/> Runs : ${players.run} <br/>   HS : ${players.HS} <br/>   Avg : ${players.Avg}<br/>   Half Century : ${players.hc}<br/>   Century : ${players.fc}</p>`;
+        });
+    </script>
 </body>
 
 </html>
